--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,324 +1,73 @@
+﻿---
 -
-    Authors: 'Hayden, Benjamin Y; Pearson, John M; Platt, Michael L;'
-    Title: 'Fictive reward signals in the anterior cingulate cortex'
-    Publication: science
-    Volume: 324
-    Number: 5929
-    Pages: 948-950
-    Year: 2009
-    Publisher: 'American Association for the Advancement of Science'
+    FIELD1: Authors
+    FIELD2: Title
+    FIELD3: Publication
+    FIELD4: Volume
+    FIELD5: Number
+    FIELD6: Pages
+    FIELD7: Year
+    FIELD8: Publisher
 -
-    Authors: 'Hayden, Benjamin Y; Heilbronner, Sarah R; Pearson, John M; Platt, Michael L;'
-    Title: 'Surprise signals in anterior cingulate cortex: neuronal encoding of unsigned reward prediction errors driving adjustment in behavior'
-    Publication: 'The Journal of Neuroscience'
-    Volume: 31
-    Number: 11
-    Pages: 4178-4187
-    Year: 2011
-    Publisher: 'Soc Neuroscience'
+    FIELD1: Miller, Webb; Hayes, Vanessa M; Ratan, Aakrosh; Petersen, Desiree C; Wittekindt, Nicola E; Miller, Jason; Walenz, Brian; Knight, James; Qi, Ji; Zhao, Fangqing; 
+    FIELD2: Genetic diversity and population structure of the endangered marsupial Sarcophilus harrisii (Tasmanian devil)
+    FIELD3: Proceedings of the National Academy of Sciences
+    FIELD4: 108
+    FIELD5: 30
+    FIELD6: 12348-12353
+    FIELD7: 2011
+    FIELD8: National Acad Sciences
 -
-    Authors: 'Hayden, Benjamin Y; Pearson, John M; Platt, Michael L;'
-    Title: 'Neuronal basis of sequential foraging decisions in a patchy environment'
-    Publication: 'Nature neuroscience'
-    Volume: 14
-    Number: 7
-    Pages: 933-939
-    Year: 2011
-    Publisher: 'Nature Publishing Group'
+    FIELD1: Girirajan, Santhosh; Johnson, Rebecca L; Tassone, Flora; Balciuniene, Jorune; Katiyar, Neerja; Fox, Keolu; Baker, Carl; Srikanth, Abhinaya; Yeoh, Kian Hui; Khoo, Su Jen; 
+    FIELD2: Global increases in both common and rare copy number load associated with autism
+    FIELD3: Human molecular genetics
+    FIELD4: 22
+    FIELD5: 14
+    FIELD6: 2870-2880
+    FIELD7: 2013
+    FIELD8: Oxford University Press
 -
-    Authors: 'Pearson, John M; Hayden, Benjamin Y; Raghavachari, Sridhar; Platt, Michael L;'
-    Title: 'Neurons in posterior cingulate cortex signal exploratory decisions in a dynamic multioption choice task'
-    Publication: 'Current biology'
-    Volume: 19
-    Number: 18
-    Pages: 1532-1537
-    Year: 2009
-    Publisher: Elsevier
+    FIELD1: Pendergrass, Sarah A; Frase, Alex; Wallace, John; Wolfe, Daniel; Katiyar, Neerja; Moore, Carrie; Ritchie, Marylyn D; 
+    FIELD2: Genomic analyses with biofilter 2.0: knowledge driven filtering, annotation, and model development
+    FIELD3: BioData mining
+    FIELD4: 6
+    FIELD5: 1
+    FIELD6: 25
+    FIELD7: 2013
+    FIELD8: BioMed Central
 -
-    Authors: 'Pearson, John M; Heilbronner, Sarah R; Barack, David L; Hayden, Benjamin Y; Platt, Michael L;'
-    Title: 'Posterior cingulate cortex: adapting behavior to a changing world'
-    Publication: 'Trends in cognitive sciences'
-    Volume: 15
-    Number: 4
-    Pages: 143-151
-    Year: 2011
-    Publisher: Elsevier
+    FIELD1: Miller, Webb; Hayes, Vanessa M; Ratan, Aakrosh; Petersen, Desiree C; Wittekindt, Nicola E; Miller, Jason; Walenz, Brian; Knight, James; Qi, Ji; Zhao, Fangqing; 
+    FIELD2: Genetic diversity and population structure of the endangered marsupial Sarcophilus harrisii (Tasmanian devil)
+    FIELD3: Proceedings of the National Academy of Sciences
+    FIELD4: 108
+    FIELD5: 30
+    FIELD6: 12348-12353
+    FIELD7: 2011
+    FIELD8: National Acad Sciences
 -
-    Authors: 'Pearson, John; Roitman, JD; Brannon, EM; Platt, ML; Raghavachari, Sridhar;'
-    Title: 'A physiologically-inspired model of numerical classification based on graded stimulus coding'
-    Publication: Neuroeconomics
-    Volume: ""
-    Number: ""
-    Pages: 36
-    Year: 2010
-    Publisher: 'Frontiers E-books'
+    FIELD1: Pendergrass, Sarah A; Frase, Alex; Wallace, John; Moore, Carrie; Katiyar, Neerja; Ritchie, Marylyn D; 
+    FIELD2: Biofilter 2.0 for Advanced Model Development, Testing, and Hypothesis Generation Using Expert Domain Knowledge Resources
+    FIELD3: GENETIC EPIDEMIOLOGY
+    FIELD4: 36
+    FIELD5: 7
+    FIELD6: 734-734
+    FIELD7: 2012
+    FIELD8: WILEY-BLACKWELL 111 RIVER ST, HOBOKEN 07030-5774, NJ USA
 -
-    Authors: 'Pearson, John; Hayden, Benjamin; Platt, Michael;'
-    Title: 'Explicit information reduces discounting behavior in monkeys'
-    Publication: 'Frontiers in psychology'
-    Volume: 1
-    Number: ""
-    Pages: 237
-    Year: 2010
-    Publisher: Frontiers
+    FIELD1: Zhang, Dunhua; Lax, AR; Henrissat, B; Coutinho, P; Katiya, N; Nierman, William C; Fedorova, Natalie; 
+    FIELD2: Carbohydrate‐active enzymes revealed in Coptotermes formosanus (Isoptera: Rhinotermitidae) transcriptome
+    FIELD3: Insect molecular biology
+    FIELD4: 21
+    FIELD5: 2
+    FIELD6: 235-245
+    FIELD7: 2012
+    FIELD8: Wiley Online Library
 -
-    Authors: 'Adams, Geoffrey K; Watson, Karli K; Pearson, John; Platt, Michael L;'
-    Title: 'Neuroethology of decision-making'
-    Publication: 'Current opinion in neurobiology'
-    Volume: 22
-    Number: 6
-    Pages: 982-989
-    Year: 2012
-    Publisher: 'Elsevier Current Trends'
--
-    Authors: 'Yorzinski, Jessica L; Patricelli, Gail L; Babcock, Jason S; Pearson, John M; Platt, Michael L;'
-    Title: 'Through their eyes: selective attention in peahens during courtship'
-    Publication: 'Journal of Experimental Biology'
-    Volume: 216
-    Number: 16
-    Pages: 3035-3046
-    Year: 2013
-    Publisher: 'The Company of Biologists Ltd'
--
-    Authors: 'Pearson, John; Platt, Michael L;'
-    Title: 'Confidence and corrections: how we make and un-make up our minds'
-    Publication: Neuron
-    Volume: 63
-    Number: 6
-    Pages: 724-726
-    Year: 2009
-    Publisher: Elsevier
--
-    Authors: 'Pearson, John M; Hayden, Benjamin Y; Platt, Michael L;'
-    Title: 'A Role for Posterior Cingulate Cortex in Policy Switching and Cognitive Control'
-    Publication: 'Neural Basis of Motivational and Cognitive Control'
-    Volume: ""
-    Number: ""
-    Pages: 127
-    Year: 2011
-    Publisher: 'MIT Press'
--
-    Authors: 'Chang, Steve WC; Brent, Lauren JN; Adams, Geoffrey K; Klein, Jeffrey T; Pearson, John M; Watson, Karli K; Platt, Michael L;'
-    Title: 'Neuroethology of primate social behavior'
-    Publication: 'Proceedings of the National Academy of Sciences'
-    Volume: 110
-    Number: 'Supplement 2'
-    Pages: 10387-10394
-    Year: 2013
-    Publisher: 'National Acad Sciences'
--
-    Authors: 'San Martín, René; Appelbaum, Lawrence G; Pearson, John M; Huettel, Scott A; Woldorff, Marty G;'
-    Title: 'Rapid brain responses independently predict gain maximization and loss minimization during economic decision making'
-    Publication: 'The Journal of Neuroscience'
-    Volume: 33
-    Number: 16
-    Pages: 7011-7019
-    Year: 2013
-    Publisher: 'Society for Neuroscience'
--
-    Authors: 'Addicott, Merideth A; Pearson, John M; Wilson, Jessica; Platt, Michael L; McClernon, F Joseph;'
-    Title: 'Smoking and the bandit: A preliminary study of smoker and nonsmoker differences in exploratory behavior measured with a multiarmed bandit task.'
-    Publication: 'Experimental and clinical psychopharmacology'
-    Volume: 21
-    Number: 1
-    Pages: 66
-    Year: 2013
-    Publisher: 'American Psychological Association'
--
-    Authors: 'Pearson, John M; Platt, Michael L;'
-    Title: 'Dopamine: burning the candle at both ends'
-    Publication: Neuron
-    Volume: 79
-    Number: 5
-    Pages: 831-833
-    Year: 2013
-    Publisher: 'Cell Press'
--
-    Authors: 'Pearson, John; Watson, Karli K; Klein, Jeffrey T; Ebitz, R Becket; Platt, Michael L;'
-    Title: 'Individual differences in social information gathering revealed through Bayesian hierarchical models'
-    Publication: 'Frontiers in neuroscience'
-    Volume: 7
-    Number: ""
-    Pages: 165
-    Year: 2013
-    Publisher: Frontiers
--
-    Authors: 'Blanchard, Tommy C; Pearson, John M; Hayden, Benjamin Y;'
-    Title: 'Postreward delays and systematic biases in measures of animal temporal discounting'
-    Publication: 'Proceedings of the National Academy of Sciences'
-    Volume: 110
-    Number: 38
-    Pages: 15491-15496
-    Year: 2013
-    Publisher: 'National Acad Sciences'
--
-    Authors: 'Jones, Sarah M; Pearson, John; DeWind, Nicholas K; Paulsen, David; Tenekedjieva, Ana-Maria; Brannon, Elizabeth M;'
-    Title: 'Lemurs and macaques show similar numerical sensitivity'
-    Publication: 'Animal cognition'
-    Volume: 17
-    Number: 3
-    Pages: 503-515
-    Year: 2014
-    Publisher: 'Springer Berlin Heidelberg'
--
-    Authors: 'Pearson, John; Platt, Michael L;'
-    Title: 'Dynamic decision making in the brain'
-    Publication: 'Nature neuroscience'
-    Volume: 15
-    Number: 3
-    Pages: 341-342
-    Year: 2012
-    Publisher: 'Nature Publishing Group'
--
-    Authors: 'Pearson, John M; Platt, Michael L;'
-    Title: 'Change detection, multiple controllers, and dynamic environments: insights from the brain'
-    Publication: 'Journal of the experimental analysis of behavior'
-    Volume: 99
-    Number: 1
-    Pages: 74-84
-    Year: 2013
-    Publisher: ""
--
-    Authors: 'Kachru, Shamit; Pearson, John; Verlinde, Herman;'
-    Title: 'Brane/flux annihilation and the string dual of a non-supersymmetric field theory'
-    Publication: 'Journal of High Energy Physics'
-    Volume: 2002
-    Number: 6
-    Pages: 21
-    Year: 2002
-    Publisher: 'IOP Publishing'
--
-    Authors: 'Pearson, John; Spradlin, Marcus; Vaman, Diana; Verlinde, Herman; Volovich, Anastasia;'
-    Title: 'Tracing the string: BMN correspondence at finite J2/N'
-    Publication: 'Journal of High Energy Physics'
-    Volume: 2003
-    Number: 5
-    Pages: 22
-    Year: 2003
-    Publisher: 'IOP Publishing'
--
-    Authors: 'Pearson, John;'
-    Title: 'Gravitons, inflatons, twisted bits: A noncommutative bestiary'
-    Publication: ""
-    Volume: ""
-    Number: ""
-    Pages: ""
-    Year: 2004
-    Publisher: ""
--
-    Authors: 'Braaten, Eric; Pearson, John;'
-    Title: 'Semiclassical corrections to the oscillation frequencies of a trapped Bose-Einstein condensate'
-    Publication: 'Physical review letters'
-    Volume: 82
-    Number: 2
-    Pages: 255
-    Year: 1999
-    Publisher: APS
--
-    Authors: 'Ebitz, R Becket; Pearson, John M; Platt, Michael L;'
-    Title: 'Pupil size and social vigilance in rhesus macaques'
-    Publication: 'Neural basis of social learning, social deciding, and other-regarding preferences'
-    Volume: ""
-    Number: ""
-    Pages: 165
-    Year: 2015
-    Publisher: 'Frontiers Media SA'
--
-    Authors: 'Pearson, John M; Watson, Karli K; Platt, Michael L;'
-    Title: 'Decision making: the neuroethological turn'
-    Publication: Neuron
-    Volume: 82
-    Number: 5
-    Pages: 950-965
-    Year: 2014
-    Publisher: 'Cell Press'
--
-    Authors: 'Kwak, Youngbin; Pearson, John; Huettel, Scott A;'
-    Title: 'Differential Reward Learning for Self and Others Predicts Self-Reported Altruism'
-    Publication: 'PloS one'
-    Volume: 9
-    Number: 9
-    Pages: e107621
-    Year: 2014
-    Publisher: 'Public Library of Science'
--
-    Authors: 'Addicott, Merideth A; Pearson, John M; Froeliger, Brett; Platt, Michael L; McClernon, F Joseph;'
-    Title: 'Smoking automaticity and tolerance moderate brain activation during explore–exploit behavior'
-    Publication: 'Psychiatry Research: Neuroimaging'
-    Volume: 224
-    Number: 3
-    Pages: 254-261
-    Year: 2014
-    Publisher: Elsevier
--
-    Authors: 'Addicott, Merideth A; Pearson, John M; Kaiser, Nicole; Platt, Michael L; McClernon, F Joseph;'
-    Title: 'Suboptimal foraging behavior: A new perspective on gambling.'
-    Publication: 'Behavioral neuroscience'
-    Volume: 129
-    Number: 5
-    Pages: 656
-    Year: 2015
-    Publisher: 'American Psychological Association'
--
-    Authors: 'Dowd, Emma Wu; Pearson, John M; Egner, Tobias;'
-    Title: 'Mind-reading without the scanner: Behavioural decoding of working memory content'
-    Publication: 'Visual Cognition'
-    Volume: 23
-    Number: 7
-    Pages: 862-866
-    Year: 2015
-    Publisher: Routledge
--
-    Authors: 'Platt, Michael L; Pearson, John M;'
-    Title: 'Dopamine: Context and counterfactuals'
-    Publication: 'Proceedings of the National Academy of Sciences'
-    Volume: 113
-    Number: 1
-    Pages: 22-23
-    Year: 2016
-    Publisher: 'National Acad Sciences'
--
-    Authors: 'Chang, Steve WC; Fagan, Nicholas A; Toda, Koji; Utevsky, Amanda V; Pearson, John M; Platt, Michael L;'
-    Title: 'Neural mechanisms of social decision-making in the primate amygdala'
-    Publication: 'Proceedings of the National Academy of Sciences'
-    Volume: 112
-    Number: 52
-    Pages: 16012-16017
-    Year: 2015
-    Publisher: 'National Acad Sciences'
--
-    Authors: 'Pearson, John M; Beck, Jeffrey M;'
-    Title: 'Neuron''s Eye View: Inferring Features of Complex Stimuli from Neural Responses'
-    Publication: 'arXiv preprint arXiv:1512.01408'
-    Volume: ""
-    Number: ""
-    Pages: ""
-    Year: 2015
-    Publisher: ""
--
-    Authors: 'San Martín, René; Kwak, Youngbin; Pearson, John M; Woldorff, Marty G; Huettel, Scott A;'
-    Title: 'Altruistic traits are predicted by neural responses to monetary outcomes for self versus charity.'
-    Publication: 'Social cognitive and affective neuroscience'
-    Volume: ""
-    Number: ""
-    Pages: nsw026
-    Year: 2016
-    Publisher: 'Oxford University Press'
--
-    Authors: 'Lighthall, N; Pearson, JM; Huettel, S; Cabeza, R;'
-    Title: 'THE IMPACT OF FEEDBACK TIMING ON VALUE LEARNING IN AGING'
-    Publication: GERONTOLOGIST
-    Volume: 55
-    Number: ""
-    Pages: 140-140
-    Year: 2015
-    Publisher: 'OXFORD UNIV PRESS INC JOURNALS DEPT, 2001 EVANS RD, CARY, NC 27513 USA'
--
-    Authors: 'CHANG, STEVE WC; BRENT, LAUREN JN; ADAMS, GEOFFREY K; KLEIN, JEFFREY T; PEARSON, JOHN M; PLATT, MICHAEL L;'
-    Title: 'DEL COMPORTAMIENTO SOCIAL DE LOS PRIMATES'
-    Publication: 'Ludus Vitalis'
-    Volume: 21
-    Number: 40
-    Pages: 151-176
-    Year: 2013
-    Publisher: ""
+    FIELD1: Volz, David C; Leet, Jessica K; Chen, Albert; Stapleton, Heather M; Katiyar, Neerja; Kaundal, Rakesh; Yu, Yang; Wang, Yinsheng; 
+    FIELD2: Tris (1, 3-dichloro-2-propyl) phosphate induces genome-wide hypomethylation within early zebrafish embryos
+    FIELD3: Environmental science & technology
+    FIELD4: 50
+    FIELD5: 18
+    FIELD6: 10255-10263
+    FIELD7: 2016
+    FIELD8: American Chemical Society
