Removed colon from Biofilter citation to fix yaml error

--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -28,7 +28,7 @@
     FIELD8: Oxford University Press
 -
     FIELD1: Pendergrass, Sarah A; Frase, Alex; Wallace, John; Wolfe, Daniel; Katiyar, Neerja; Moore, Carrie; Ritchie, Marylyn D; 
-    FIELD2: Genomic analyses with biofilter 2.0: knowledge driven filtering, annotation, and model development
+    FIELD2: Genomic analyses with biofilter 2.0 - knowledge driven filtering, annotation, and model development
     FIELD3: BioData mining
     FIELD4: 6
     FIELD5: 1
