Removed colon from Carbohydrate citation to conform to yaml rules

--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -55,7 +55,7 @@
     FIELD8: WILEY-BLACKWELL 111 RIVER ST, HOBOKEN 07030-5774, NJ USA
 -
     FIELD1: Zhang, Dunhua; Lax, AR; Henrissat, B; Coutinho, P; Katiya, N; Nierman, William C; Fedorova, Natalie; 
-    FIELD2: Carbohydrate‐active enzymes revealed in Coptotermes formosanus (Isoptera: Rhinotermitidae) transcriptome
+    FIELD2: Carbohydrate‐active enzymes revealed in Coptotermes formosanus (Isoptera - Rhinotermitidae) transcriptome
     FIELD3: Insect molecular biology
     FIELD4: 21
     FIELD5: 2
